add_subdirectory(imlib)
add_subdirectory(lisp)
add_subdirectory(net)
add_subdirectory(sdlport)
add_subdirectory(tool)

add_library(abuselib
    common.h
    lol/matrix.cpp 
    lol/matrix.h
    lol/timer.cpp 
    lol/timer.h
    specache.cpp 
    specache.h
    netcfg.cpp 
    netcfg.h
    innet.cpp
    chat.cpp 
    chat.h
    endgame.cpp
    loadgame.cpp 
    loadgame.h
    profile.cpp 
    profile.h
    cop.cpp 
    cop.h
    statbar.cpp
    compiled.cpp 
    compiled.h
    ant.cpp 
    ant.h
    sensor.cpp
    demo.cpp 
    demo.h
    lcache.cpp 
    lcache.h
    nfclient.cpp 
    nfclient.h
    clisp.cpp 
    clisp.h
    gui.cpp 
    gui.h
    transp.cpp 
    transp.h
    collide.cpp
    property.cpp 
    property.h
    cache.cpp 
    cache.h
    particle.cpp 
    particle.h
    objects.cpp 
    objects.h
    extend.cpp 
    extend.h
    console.cpp 
    console.h
    ability.cpp 
    ability.h
    items.cpp 
    items.h
    dev.cpp 
    dev.h
    chars.cpp 
    chars.h
    level.cpp 
    level.h
    smallfnt.cpp
    automap.cpp 
    automap.h
    help.cpp 
    help.h
    intsect.cpp 
    intsect.h
    loader2.cpp 
    loader2.h
    seq.cpp 
    seq.h
    points.cpp 
    points.h
    fnt6x13.cpp
    morpher.cpp 
    morpher.h
    menu.cpp 
    menu.h
    director.cpp 
    director.h
    view.cpp 
    view.h
    configuration.cpp 
    configuration.h
    light.cpp 
    light.h
    devsel.cpp 
    devsel.h
    crc.cpp 
    crc.h
    gamma.cpp 
    gamma.h
    id.h 
    netface.h 
    isllist.h 
    sbar.h
    nfserver.h
    ui/volumewindow.cpp 
    ui/volumewindow.h
    )

target_compile_definitions(abuselib 
    PUBLIC
        PACKAGE_NAME="abuse"
        PACKAGE_VERSION="0.8"
        NO_CHECK=1
)

target_include_directories(abuselib
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
)

target_link_libraries(abuselib
    PRIVATE 
        imlib
        lisplib
        netlib
)

add_executable(abuse
    game.cpp 
    game.h
)

target_link_libraries(abuse
    PRIVATE 
        abuselib
        imlib 
        lisplib 
        netlib 
        sdlportlib
)

install(TARGETS abuse RUNTIME DESTINATION bin)
